--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "@types/chrome": "^0.0.280",
     "typescript": "^5.6.3",
     "wxt": "^0.19.13"
+  },
+  "dependencies": {
+    "@material/web": "^2.2.0"
   }
 }
